# hailo-apps-infra

./: README.md  build.py  download_resources.sh  pyproject.toml  setup.py
cpp/: depth_estimation.cpp  depth_estimation.hpp  meson.build  yolo_hailortpp.cpp  yolo_hailortpp.hpp
doc/: develepment_guide.md  development_guide.md
hailo_apps_infra/: depth_estimation_pipeline.py  detection_pipeline.py  gstreamer_app.py  gstreamer_helper_pipelines.py  hailo_rpi_common.py
