[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hailo_apps_infra"
version = "0.1.0"
description = "A collection of infrastructure utilities for Hailo applications"
authors = [{ name = "Gilad Nahor", email = "giladn@hailo.ai" }]
requires-python = ">=3.6"
dependencies = [
    "numpy<2.0.0",
    "setproctitle",
    "opencv-python"
]

[project.urls]
homepage = "https://github.com/hailo-ai/hailo-apps-infra"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"hailo_apps_infra" = ["*.json", "*.sh", "*.cpp", "*.hpp", "*.pc", "*.mp4", "*.so", "resources/*"]

[tool.setuptools.packages]
find = { include = ["hailo_apps_infra"] }

[project.scripts]
get-usb-camera = "hailo_apps_infra.get_usb_camera:main"
